# onething-cli

./: .editorconfig  .gitignore  Cargo.toml  Changes.md  README.md  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: dnd.rs  http_client.rs  main.rs  settings.rs  tasks.rs
