[package]
name = "onething-cli"
version = "0.0.2"
edition = "2021"
description = "A personal command line tool to access OneThing tools via the CLI"
license = "MIT"
repository = "https://github.com/intellis-team/onething-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
config = "0.14.0"
directories = "5.0"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
openssl = { version = "0.10.64", features = ["vendored"] }
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
